--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_data_connect: ^0.1.3+2
   google_sign_in: ^6.3.0
   sign_in_button: ^3.2.0
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
