--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,8 @@ flutter:
     - family: Montserrat
       fonts:
         - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 800
+        - asset: assets/fonts/Montserrat-Bold.ttf
           weight: 700
         - asset: assets/fonts/Montserrat-Regular.ttf
           weight: 400
