--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,7 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  pod 'FirebaseSharedSwift', '11.8.0'
   pod 'FirebaseFirestore', :git => 'https://github.com/invertase/firestore-ios-sdk-frameworks.git', :tag => '11.8.0'
   target 'RunnerTests' do
     inherit! :search_paths
